banner section done

--- a/index.html
+++ b/index.html
@@ -13,7 +13,15 @@
 </head>
 
 <body>
-
+    <header>
+        <div class="banner">
+            <div class="banner-text">
+                <h3>Happy New Year</h3>
+                <h2>New Year Party </h2>
+                <h2>Celebration </h2>
+            </div>
+        </div>
+    </header>
 </body>
 
 </html>
