offer section done

--- a/index.html
+++ b/index.html
@@ -22,6 +22,14 @@
             </div>
         </div>
     </header>
+    <main>
+        <section class="offer">
+            <h2 class="offer-heading">65% OFF</h2>
+            <p>OUR HOLIDAY DEALS ARE BETTER</p>
+            <h2 class="catagory">ALL CATEGORIES</h2>
+            <img src="./images/New Year Photo.png" alt="">
+        </section>
+    </main>
 </body>
 
 </html>
