--- a/index.html
+++ b/index.html
@@ -23,11 +23,28 @@
         </div>
     </header>
     <main>
+        <!-- offer section  -->
         <section class="offer">
             <h2 class="offer-heading">65% OFF</h2>
             <p>OUR HOLIDAY DEALS ARE BETTER</p>
             <h2 class="catagory">ALL CATEGORIES</h2>
             <img src="./images/New Year Photo.png" alt="">
+        </section>
+
+        <!-- welcome section -->
+        <section class="container">
+            <div class="welcome-area">
+                <div class="welcome-text">
+                    <h2>Welcome to </h2>
+                    <h2>midnight party </h2>
+                    <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie</p>
+                    <p>malesuada. Ipsum sed sodales risus ut pellentesque vel euismod</p>
+                    <button>JOIN NOW</button>
+                </div>
+                <div class="welcome-img">
+                    <img src="./images/Group 70.png" alt="">
+                </div>
+            </div>
         </section>
     </main>
 </body>
