new best offer done succesfully

--- a/index.html
+++ b/index.html
@@ -46,6 +46,46 @@
                 </div>
             </div>
         </section>
+
+        <!-- meeting section -->
+
+        <section class="container">
+            <div class="meeting-area">
+                <div class="meeting-text">
+                    <h3> <span style="color:red">Place:</span> New Park Hotel</h3>
+                    <h3> <span style="color:red">Date:</span> 31 December Night 2023</h3>
+                    <h3> <span style="color:red">Time:</span> Evening 7.30 pm to 12.30 am</h3>
+                    <div class="mtng-btn">
+                        <button class="btn">JOIN NOW</button>
+                    </div>
+                </div>
+
+            </div>
+        </section>
+
+        <!-- new offer section -->
+        <section class="container">
+            <div class="newoffer-area">
+                <div class="left-side">
+                    <h4>NEW BEST OFFER</h4>
+                    <h3>Coming Soon</h3>
+                    <p>Dolor sit amet consectetur. Consequat </p>
+                    <p>eget consectetur maecenas sed molestie</p>
+                    <p>malesuada. Ipsum sed sodales risus ut</p>
+                    <p>pellentesque vel euismod. </p>
+                </div>
+                <div class="middle">
+                    <img src="./images/Ellipse 1.png" alt="">
+                </div>
+                <div class="right-side">
+                    <h2>2024</h2>
+                    <p>Dolor sit amet consectetur.</p>
+                    <p>Consequat eget consectetur</p>
+                    <p>maecenas sed.</p>
+                    <img src="./images/Group 96.png" alt="">
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 
