portfolio section added succesfully

--- a/index.html
+++ b/index.html
@@ -86,6 +86,28 @@
                 </div>
             </div>
         </section>
+
+
+        <!-- portfolio section -->
+
+        <section class="container">
+            <div class="portfolio-content">
+                <h4>THE BEST GIFTS</h4>
+                <h3>Our Awesome Portfolio</h3>
+                <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada.</p>
+                <p>psum sed sodales risus ut pellentesque vel euismod. </p>
+
+            </div>
+            <div class="grid-container">
+                <div class="grid-item"><img src="./images/Rectangle 3.png" alt=""></div>
+                <div class="grid-item"><img src="./images/Rectangle 4.png" alt=""></div>
+                <div class="grid-item"><img src="./images/Rectangle 5.png" alt=""></div>
+                <div class="grid-item"><img src="./images/Rectangle 6.png" alt=""></div>
+                <div class="grid-item"><img src="./images/Rectangle 7.png" alt=""></div>
+                <div class="grid-item"><img src="./images/Rectangle 8.png" alt=""></div>
+            </div>
+        </section>
+
     </main>
 </body>
 
