--- a/index.html
+++ b/index.html
@@ -108,7 +108,50 @@
             </div>
         </section>
 
+        <!-- contact section -->
+        <section class="container">
+            <div class="form-area">
+                <form>
+                    <img src="./images/Group 61.png" alt="" class="logo">
+                    <h3>Subscribe Newsletter</h3>
+                    <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada.</p>
+                    <p>Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+                    <div class="email-area"> <input type="email" name="" id="" placeholder="user@gmail.com">
+                        <button type="submit">Subscribe</button>
+                    </div>
+                </form>
+            </div>
+        </section>
     </main>
+    <footer>
+        <div class="footer-content">
+            <div class="lefside">
+                <p>44, Big Building Roosevelt Street</p>
+                <p>Beach Gardens Florida 33410</p>
+            </div>
+            <div class="right-side">
+                <div class="phone">
+                    <img src="./images/Call.png" alt="">
+                    <p>+00 123 584 124</p>
+                </div>
+                <div class="website">
+                    <img src="./images/Website.png" alt="">
+                    <p>www.website.com</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="footer-logo">
+            <img src="./images/Facebook.png" alt="">
+            <img src="./images/Instagram.png" alt="">
+            <img src="./images/Twitter.png" alt="">
+            <img src="./images/Linkedin.png" alt="">
+        </div>
+        <div class="copyright">
+            <p>2017, All Rights Reserved.</p>
+            <p>Unsubscribe</p>
+        </div>
+    </footer>
 </body>
 
 </html>
